src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwF1000-dhU.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen true\n    default-column-width { fixed 1000; }\n    default-window-height {  }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1000 × 688, bounds: 1248 × 688, states: [Activated]
